[metadata]
name = pyltsv
description = Python library for LTSV
long_description = file: README.md
long_description_content_type = text/markdown
author = 10sr
author_email = 8.slashes@gmail.com
url = https://github.com/10sr/pyltsv
 # keywords = 
license = Apache-2.0
classifiers =
  License :: OSI Approved :: Apache
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8


[options]
packages = find:
install_requires =
  six
  typing; python_version < "3"

[options.packages.find]
exclude =
  tests

[options.extras_require]
dev =
  coverage
linter =
  pylint
  black
  isort
  flake8
  hacking
  flake8-black
  flake8-isort
  pep8-naming
  flake8-docstrings
  darglint
  flake8-broken-line
  flake8-no-implicit-concat
  mypy


[coverage:run]
branch = True
omit =
  tests/*
  .venv/*

[coverage:report]
exclude_lines =
  if self.debug:
  pragma: no cover
  raise NotImplementedError
  if __name__ == .__main__.:
ignore_errors = True


[pylint]
disable =
  R0903,  # too-few-public-methods
  R0205,  # useless-object-inheritance
  R1711,  # useless-return
  C0103,  # invalid-name
  C0301,  # line-too-long

[flake8]
extend-ignore =
  E203,  # See https://github.com/peterjc/flake8-black#configuration, https://github.com/PyCQA/pycodestyle/issues/373
  F401,  # imported but unused
  E501,  # line too long
  H102,  # Apache 2.0 license header not found
exclude =
  .git,
  __pycache__,
  .venv,
  .mypy_cache,
  docs,
  build,


[isort]
# Be happy with black formatter and hacking linter
force_single_line = true
line_length = 88
lines_between_types = 1


[darglint]
docstring_style = sphinx


[mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = 3.8
platform = linux

# flake8-mypy expects the two following for sensible formatting
show_column_numbers = True

# show error messages from unrelated files
follow_imports = normal

# # suppress errors about unsatisfied imports
ignore_missing_imports = True
